--- a/style.css
+++ b/style.css
@@ -144,26 +144,39 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  margin-bottom: 25px;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.header .main-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .theme-toggle {
+  font-size: 1.75rem;
+  padding: 0;
+  background-color: transparent;
+  color: var(--text-color);
 }
 
 .header .finder-bar {
   display: flex;
   flex-wrap: wrap;
-  gap: 8px;
-  row-gap: 4px;
+  gap: 10px;
 }
 
 .header .search-box {
   display: inline-flex;
-  background-color: var(--text-color);
-  color: var(--bg-color);
+  background-color: white;
+  color: #333;
+  border: 1px solid #333;
   border-radius: 50px;
   justify-content: space-between;
   align-items: center;
-  gap: 4px;
-  padding: 4px 8px;
+  gap: 10px;
+  padding: 10px 15px;
 }
 
 .header .search-box input {
@@ -177,9 +190,9 @@ body {
   display: flex;
   align-items: center;
   overflow-x: auto;
-  gap: 4px;
+  gap: 5px;
   cursor: pointer;
-  padding: 4px 8px;
+  padding: 5px 10px;
   border: 1px solid var(--border-color);
   border-radius: 5px;
   max-width: 100%;
@@ -195,12 +208,11 @@ body {
 .header .actions {
   display: flex;
   flex-wrap: wrap;
-  gap: 4px;
+  gap: 5px;
 }
 
 .header .actions > * {
   min-width: 80px;
-  padding: 4px 8px;
 }
 
 .header .edit-mode {
@@ -216,29 +228,19 @@ body {
   color: white;
 }
 
-.header .import, .header .export {
+.header .import,
+.header .export {
   background-color: var(--blue);
 }
 
-.header .theme-toggle {
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 2rem;
-  padding: 0;
-  background-color: transparent;
-  color: var(--text-color);
-}
-
 .item-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 5px;
 }
 
 .item-container .item {
   position: relative;
-  width: 100px;
   height: max-content;
   text-align: center;
   cursor: pointer;
@@ -255,7 +257,7 @@ body {
 }
 
 .item-container .item img {
-  max-height: 150px;
+  width: 100%;
   border: 2px solid transparent;
   object-fit: cover;
 }
