--- a/style.css
+++ b/style.css
@@ -169,9 +169,10 @@ body {
 
 .header .search-box {
   display: inline-flex;
+  width: 250px;
   background-color: white;
   color: #333;
-  border: 1px solid #333;
+  border: 1px solid var(--border-color);
   border-radius: 50px;
   justify-content: space-between;
   align-items: center;
@@ -181,6 +182,7 @@ body {
 
 .header .search-box input {
   flex: 1;
+  width: 100%;
   padding: 0;
   border: none;
   color: var(--bg-color);
@@ -234,9 +236,16 @@ body {
 }
 
 .item-container {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   gap: 5px;
+}
+
+.item-container > .message {
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 .item-container .item {
@@ -336,6 +345,10 @@ body {
   .app {
     padding: 10px;
   }
+  
+  .header .search-box {
+    width: 200px;
+  }
 }
 
 /* Small screens (Phones, up to 480px wide) */
@@ -346,6 +359,10 @@ body {
 
   .header .finder-bar {
     flex-direction: column;
+  }
+
+  .header .search-box {
+    width: 100%;
   }
 
   .header .finder-bar > * {
